loading animation before loading data , suggestions movies

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
+        "vue-loading-spinner": "^1.0.11",
         "vue-router": "^3.0.2"
     }
 }
